@@ -64,6 +64,7 @@ Date: 2025-12-07
     - Fixed the tech icons of all battery equipment.
     - Fixed module tiers not taking the right amount of circuits.
     - Continued fixing and improving the factoriopedia.
+    - Fixed some recipes and technologies using old, extremely old icons.
 
 ---------------------------------------------------------------------------------------------------
 Version: 0.6.514
